--- a/exemplos-faculdade-descomplica/src/desenvolvimento-frontend/midia-com-html/site/index.html
+++ b/exemplos-faculdade-descomplica/src/desenvolvimento-frontend/midia-com-html/site/index.html
@@ -36,20 +36,71 @@
             <hr>
         </p>
         <figure>
-            <img src="/exemplos-faculdade-descomplica/src/desenvolvimento-frontend/midia-com-html/site/img/baixados.jpg" alt="Black-Bir-sr71">
+            <img src="/exemplos-faculdade-descomplica/src/desenvolvimento-frontend/midia-com-html/site/img/baixados.jpg"
+                alt="Black-Bir-sr71">
             <figcaption>Sr-71</figcaption>
         </figure>
         <figure>
-            <img src="/exemplos-faculdade-descomplica/src/desenvolvimento-frontend/midia-com-html/site/img/baixados.jpg" alt="Black-Bir-sr71">
+            <img src="/exemplos-faculdade-descomplica/src/desenvolvimento-frontend/midia-com-html/site/img/baixados.jpg"
+                alt="Black-Bir-sr71">
             <figcaption>Sr-71</figcaption>
         </figure>
         <figure>
-            <img src="/exemplos-faculdade-descomplica/src/desenvolvimento-frontend/midia-com-html/site/img/baixados.jpg" alt="Black-Bir-sr71">
+            <img src="/exemplos-faculdade-descomplica/src/desenvolvimento-frontend/midia-com-html/site/img/baixados.jpg"
+                alt="Black-Bir-sr71">
             <figcaption>Sr-71</figcaption>
         </figure>
+    </section>
+    <section>
+        <br>
+        <h2>Taxas e Serviços</h2>
+        <p>Veja nossas faixas para serviços</p>
+        <table border="">
+            <caption>Descrição dos serviçoes e respectivos valores</caption>
+            <thead>
+                <tr>
+                    <th>
+                        Serviço
+                    </th>
+                    <th>
+                        Valor
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        Reserva do Hotel
+                    </td>
+                    <td>
+                        R$:150.00
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Compra de Passagens
+                    </td>
+                    <td>
+                        R$:100.00
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Aluguel de Carros
+                    </td>
+                    <td>
+                        R$:50.00
+                    </td>
+                </tr>
+            </tbody>
+            <tfoot>
+                
+            </tfoot>
+        </table>
     </section>
     <footer>
         <p>desenvolvido por Calleb</p>
     </footer>
 </body>
+
 </html>
